clear inut fields of days and teams after selecting them

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
     <input list="days" id="dayInput" name="day" placeholder="Select a day">
     <datalist id="days">
-      <!-- Options populated elsewhere -->
+      <!-- Options populated fetchdays -->
     </datalist>
 
     <div class="print">
