adding creat new team for user

--- a/public/newshift.html
+++ b/public/newshift.html
@@ -14,6 +14,7 @@
         <a href="/proposal"class="w">New Plan</a>
         <a href="/newuser"class="w">new user</a>
         <a href="/newshift"class="w">New Shift</a>
+        <a href="/newteam" class="w" id="n-t">New Team</a>
         <HR>
       </div> 
       <form id="newshift">
