--- a/public/newuser.html
+++ b/public/newuser.html
@@ -15,6 +15,7 @@
         <a href="/proposal"class="w">New Plan</a>
         <a href="/newuser"class="w">New User</a>
         <a href="/newshift"class="w">New Shift</a>
+        <a href="/newteam" class="w" id="n-t">New Team</a>
   <hr>
       </div>
 
