--- a/public/newuser.html
+++ b/public/newuser.html
@@ -9,14 +9,13 @@
 <body>
 
     <div id="menu">
-        <a href="/operators"class="w">Operators</a>
-        <a href="/"id="r"class="w">Home</a>
-        <a href="/workstations"class="w">workstations</a>
-        <a href="/proposal"class="w">New Plan</a>
-        <a href="/newuser"class="w">New User</a>
-        <a href="/newshift"class="w">New Shift</a>
+        <a href="/" id="r" class="w">Home</a>
+        <a href="/workstations" class="w">Workstations</a>
         <a href="/newteam" class="w" id="n-t">New Team</a>
-  <hr>
+      </div>
+    <hr>
+      <div id="admin_menu">
+        <a href="/newshift" class="w">Shift's</a>
       </div>
 
 
