--- a/public/newshift.html
+++ b/public/newshift.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="css/newshift.css"> 
 </head>
 <body>
-    <div class="menu">
-        <a href="/operators"class="w">operators</a>
-        <a href="/"class="w">Home</a>
-        <a href="/workstations"class="w">workstations</a>
-        <a href="/proposal"class="w">New Plan</a>
-        <a href="/newuser"class="w">new user</a>
-        <a href="/newshift"class="w">New Shift</a>
+    <div id="menu">
+        <a href="/operators" class="w">Operators</a>
+        <a href="/" id="r" class="w">Home</a>
+        <a href="/workstations" class="w">Workstations</a>
         <a href="/newteam" class="w" id="n-t">New Team</a>
-        <HR>
-      </div> 
+      </div>
+    <hr>
+      <div id="admin_menu">
+        <a href="/newuser" class="w">User's</a>
+      </div>
+      
       <form id="newshift">
         <h1>Create New Shift</h1> 
         <h4 id="user_team"></h4>
