--- a/public/workstations.html
+++ b/public/workstations.html
@@ -8,16 +8,19 @@
   <body>
 
     <div id="menu">
-      <a href="/operators"class="w">Operators</a>
-      <a href="/"id="r"class="w">Home</a>
-      <a href="/workstations"class="w">workstations</a>
-      <a href="/proposal"class="w">New Plan</a>
-      <a href="/newuser"class="w">New User</a>
-      <a href="/newshift"class="w">New Shift</a>
+      <a href="/operators" class="w">Operators</a>
+      <a href="/" id="r" class="w">Home</a>
       <a href="/newteam" class="w" id="n-t">New Team</a>
-
     </div>
-
+  <hr>
+    <div id="admin_menu">
+      <a href="/newuser" class="w">User's</a>
+      <a href="/newshift" class="w">Shift's</a>
+    </div>
+    <!-- New Plan Button -->
+    <div id="new_plan_button">
+      <button class="big-button">New Plan</button>
+    </div>
     <HR>
 
       <table id="maintable">
