adding role admin and integrate that to all pages

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,6 @@
       <input type="button" id="login" value="Aanmelden">
     </div>
 
-    <script type="text/javascript" src="/js/index.js"></script>
+    <script type="module" src="/js/index.js"></script>
   </body>
 </html>
