--- a/public/login.html
+++ b/public/login.html
@@ -41,7 +41,7 @@
 
 
 
-<script type="text/javascript" src="js/login.js" ></script>
+<script type="module" src="js/login.js" ></script>
 
 </body>
 </html>
