--- a/public/newteam.html
+++ b/public/newteam.html
@@ -41,6 +41,6 @@
         <hr>
         <button type="button" id="cancel">Cancel</button>
     </form>
-    <script type="text/javascript" src="js/newteam.js"></script>
+    <script type="module" src="js/newteam.js"></script>
 </body>
 </html>
