--- a/public/newuser.html
+++ b/public/newuser.html
@@ -47,7 +47,7 @@
             <!-- Cancel Button -->
             <hr style="width:80%">
             
-            <input type="button" name="cancel" value="Cancel" onclick="cancel()">
+            <input id="cancel_button" type="button" name="cancel" value="Cancel">
            
 
             <!-- Message Display -->
@@ -55,6 +55,6 @@
         </div>
 
 
-    <script type="text/javascript" src="js/newuser.js"></script>
+    <script type="module" src="js/newuser.js"></script>
 </body>
 </html>
