--- a/public/notAuthorized.html
+++ b/public/notAuthorized.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
-    <link rel="stylesheet" href="/css/404.css">
+    <link rel="stylesheet" href="/css/notAuthorized.css">
 </head>
 <body>
   <div id="menu">
@@ -24,8 +24,8 @@
     <hr>
   </div>
   <div id="content">
-    <h1>Error 404</h1>
-    <h1>Page not found</h1>
+    <h1>Error 401</h1>
+    <h1>You are not authorized</h1>
   </div>
   <hr style="width:70%" id="lh">
   <div id="user_team" style="display: none;">
@@ -34,6 +34,6 @@
   <div class="log">
     <input type="button" id="login" value="Aanmelden">
   </div>
-  <script type="module" src="/js/404.js"></script>
+  <script type="module" src="/js/notAuthorized.js"></script>
 </body>
 </html>
