--- a/public/operators.html
+++ b/public/operators.html
@@ -80,6 +80,6 @@
         </div>
     </div>
 
-    <script src="/js/operators.js"></script>
+    <script src="/js/operators.js" type="module"></script>
 </body>
 </html>
