--- a/public/workstations.html
+++ b/public/workstations.html
@@ -58,6 +58,6 @@
   ​<input type="button" id="logout" onclick="logout()" value="uitlogen">
 </div>
 
-<script  src="js/workstations.js"></script>
+<script type="module" src="js/workstations.js"></script>
   </body>
 </html>
