--- a/public/newshift.html
+++ b/public/newshift.html
@@ -48,6 +48,6 @@
     <div id="msg-login"></div>
     
 
-    <script type="text/javascript" src="js/newshift.js"></script> 
+    <script type="module" src="js/newshift.js"></script> 
 </body>
 </html>
