contact us page and cookies warning

--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+    <!-- Cookie Consent Banner -->
+    <div id="cookieConsent">
+        <p>This website uses cookies to ensure you get the best experience on our website. By logging in, you accept our use of cookies. <a href="/cookie-policy">Learn more</a></p>
+        <button id="acceptCookies">Accept</button>
+      </div>
+
 </div>
 <div class="logindiv"id="lidiv">
   <h1>Login</h1>
