fixing admin menu and puting contact in user menu

--- a/public/newshift.html
+++ b/public/newshift.html
@@ -12,6 +12,7 @@
         <a href="/" id="r" class="w">Home</a>
         <a href="/workstations" class="w">Workstations</a>
         <a href="/newteam" class="w" id="n-t">New Team</a>
+        <a href="/contact" class="w" >Contact</a>
       </div>
     <hr>
       <div id="admin_menu">
