--- a/public/workstations.html
+++ b/public/workstations.html
@@ -11,6 +11,7 @@
       <a href="/operators" class="w">Operators</a>
       <a href="/" id="r" class="w">Home</a>
       <a href="/newteam" class="w" id="n-t">New Team</a>
+      <a href="/contact" class="w" >Contact</a>
     </div>
   <hr>
     <div id="admin_menu">
