--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       <a href="/operators" class="w">Operators</a>
       <a href="/workstations" class="w">Workstations</a>
       <a href="/newteam" class="w" id="n-t">New Team</a>
+      <a href="/contact" class="w">Contact</a>
     </div>
 
     <HR style="width:70%">
