creating two pages of users and shifts

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
     <HR style="width:70%">
 
     <div id="admin_menu">
-      <a href="/newuser" class="w">User's</a>
-      <a href="/newshift" class="w">Shift's</a>
+      <a href="/users" class="w">User's</a>
+      <a href="/shifts" class="w">Shift's</a>
     </div>
 
     <!-- New Plan Button -->
