--- a/public/notAuthorized.html
+++ b/public/notAuthorized.html
@@ -15,8 +15,8 @@
   </div>
   <hr>
   <div id="admin_menu" style="display: none;">
-    <a href="/newuser" class="w">User's</a>
-    <a href="/newshift" class="w">Shift's</a>
+    <a href="/users" class="w">User's</a>
+    <a href="/shifts" class="w">Shift's</a>
   </div>
   <!-- New Plan Button -->
   <div id="new_plan_button" style="display: none;">
