--- a/public/shifts.html
+++ b/public/shifts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create New Shift</title>
-    <link rel="stylesheet" href="css/newshift.css"> 
+    <link rel="stylesheet" href="css/shifts.css"> 
 </head>
 <body>
     <div id="menu">
@@ -16,7 +16,7 @@
       </div>
     <hr>
       <div id="admin_menu">
-        <a href="/newuser" class="w">User's</a>
+        <a href="/users" class="w">User's</a>
       </div>
       
       <form id="newshift">
@@ -49,6 +49,6 @@
     <div id="msg-login"></div>
     
 
-    <script type="module" src="js/newshift.js"></script> 
+    <script type="module" src="js/shifts.js"></script> 
 </body>
 </html>
