logout button in users page and shifts page

--- a/public/html/shifts.html
+++ b/public/html/shifts.html
@@ -70,7 +70,11 @@
     </div>
 
     <div id="msg-login"></div>
-
+    <hr>
+    <div id="user_team">Welkom: <span id="un"></span>, Your Team is: <span id="teamname"></span></div>
+    <div class="log">
+        <input type="button" id="logout" value="Uitloggen">
+    </div>
     <script type="module" src="js/shifts.js"></script> 
 </body>
 </html>
