fixing error in shifts

--- a/public/html/shifts.html
+++ b/public/html/shifts.html
@@ -21,7 +21,7 @@
     <div class="form-container">
         <h1>Shift Management</h1>
         <form id="newshift">
-            <h4 id="user_team">Team: [Current Team]</h4>
+            <h4 id="userteam">Team: [Current Team]</h4>
             <h4 id="current_shift">Shift: [Current Shift]</h4>
             <h4 id="current_user">User: [Current User]</h4>
             <hr>
