integrate menu in all pages

--- a/public/html/404.html
+++ b/public/html/404.html
@@ -12,14 +12,12 @@
     <a href="/" id="r" class="w">Home</a>
     <a href="/workstations" class="w">Workstations</a>
     <a href="/newteam" class="w" id="n-t">New Team</a>
-    <a href="/contact" class="w" >Contact</a>
+    <a href="/contact" class="w">Contact</a>
+    <!-- Integrated admin menu items -->
+    <a href="/users" class="w admin-item" id="users-link" style="display: none;">Users</a>
+    <a href="/shifts" class="w admin-item" id="shifts-link" style="display: none;">Shifts</a>
   </div>
   <hr>
-  <div id="admin_menu" style="display: none;">
-    <a href="/users" class="w">User's</a>
-    <a href="/shifts" class="w">Shift's</a>
-  </div>
-  <!-- New Plan Button -->
   <div id="new_plan_button" style="display: none;">
     <button class="big-button">New Plan</button>
     <hr>
