--- a/public/html/index.html
+++ b/public/html/index.html
@@ -15,14 +15,12 @@
       <a href="/workstations" class="w">Workstations</a>
       <a href="/newteam" class="w" id="n-t">New Team</a>
       <a href="/contact" class="w">Contact</a>
+      <!-- Integrated admin menu items -->
+      <a href="/users" class="w admin-item" id="users-link" style="display: none;">Users</a>
+      <a href="/shifts" class="w admin-item" id="shifts-link" style="display: none;">Shifts</a>
     </div>
 
     <HR style="width:70%">
-
-    <div id="admin_menu">
-      <a href="/users" class="w">User's</a>
-      <a href="/shifts" class="w">Shift's</a>
-    </div>
 
     <!-- New Plan Button -->
     <div id="new_plan_button">
