--- a/public/html/operators.html
+++ b/public/html/operators.html
@@ -11,13 +11,11 @@
             <a href="/" id="r" class="w">Home</a>
             <a href="/workstations" class="w">Workstations</a>
             <a href="/newteam" class="w" id="n-t">New Team</a>
-            <a href="/contact" class="w" >Contact</a>
+            <a href="/contact" class="w">Contact</a>
+            <a href="/users" class="w admin-item" style="display: none;">Users</a>
+            <a href="/shifts" class="w admin-item" style="display: none;">Shifts</a>
         </div>
         <hr>
-        <div id="admin_menu" style="display: none;">
-            <a href="/users" class="w">User's</a>
-            <a href="/shifts" class="w">Shift's</a>
-        </div>
 
         <!-- New Plan Button -->
         <div id="new_plan_button" style="display: none;">
