--- a/public/html/proposal.html
+++ b/public/html/proposal.html
@@ -12,7 +12,10 @@
       <a href="/" id="r" class="w">Home</a>
       <a href="/workstations" class="w">Workstations</a>
       <a href="/newteam" class="w" id="n-t">New Team</a>
-      <a href="/contact" class="w" >Contact</a>
+      <a href="/contact" class="w">Contact</a>
+      <!-- Integrated admin links -->
+      <a href="/users" class="w admin-link" id="users-link">Users</a>
+      <a href="/shifts" class="w admin-link" id="shifts-link">Shifts</a>
     </div>
     <hr>
     <div id="aan_div">
@@ -76,7 +79,7 @@
     <hr>
     <div id="user_team">Welkom: <span id="username"></span>, Your Team is: <span id="teamname"></span></div>
     <div class="log">
-      <input type="button" id="logout"  value="Uitlogen">
+      <input type="button" id="logout" value="Uitlogen">
     </div>
   </div>
 
