--- a/public/html/shifts.html
+++ b/public/html/shifts.html
@@ -13,11 +13,9 @@
         <a href="/workstations" class="w">Workstations</a>
         <a href="/newteam" class="w" id="n-t">New Team</a>
         <a href="/contact" class="w">Contact</a>
+        <a href="/users" class="w" id="admin-link" style="display: none;">Users</a>
     </div>
     <hr>
-    <div id="admin_menu" style="display: none;">
-        <a href="/users" class="w">User's</a>
-    </div>
     <div class="form-container">
         <h1>Shift Management</h1>
         <form id="newshift">
