--- a/public/html/users.html
+++ b/public/html/users.html
@@ -7,20 +7,15 @@
     <link rel="stylesheet" href="css/users.css">
 </head>
 <body>
-
-
     <div id="menu">
         <a href="/" id="r" class="w">Home</a>
         <a href="/workstations" class="w">Workstations</a>
         <a href="/newteam" class="w" id="n-t">New Team</a>
-        <a href="/contact" class="w" >Contact</a>
+        <a href="/contact" class="w">Contact</a>
+        <a href="/shifts" class="w admin-only" id="admin-shifts">Shift's</a> <!-- Integrated admin link -->
     </div>
     <hr>
-    <div id="admin_menu" style="display: none;">
-        <a href="/shifts" class="w">Shift's</a>
-    </div>
 
-    
     <div class="container">
         <h1>User Management System</h1>
         <h4 id="current_team">current_team</h4>
