--- a/public/html/notAuthorized.html
+++ b/public/html/notAuthorized.html
@@ -12,12 +12,11 @@
     <a href="/" id="r" class="w">Home</a>
     <a href="/workstations" class="w">Workstations</a>
     <a href="/newteam" class="w" id="n-t">New Team</a>
+    <a href="/users" class="w admin-link" style="display: none;">User's</a>
+    <a href="/shifts" class="w admin-link" style="display: none;">Shift's</a>
+    <a href="/contact" class="w">Contact</a>
   </div>
   <hr>
-  <div id="admin_menu" style="display: none;">
-    <a href="/users" class="w">User's</a>
-    <a href="/shifts" class="w">Shift's</a>
-  </div>
   <!-- New Plan Button -->
   <div id="new_plan_button" style="display: none;">
     <button class="big-button">New Plan</button>
