--- a/public/html/workstations.html
+++ b/public/html/workstations.html
@@ -6,59 +6,53 @@
     <title>workstations</title>
   </head>
   <body>
-
     <div id="menu">
       <a href="/operators" class="w">Operators</a>
       <a href="/" id="r" class="w">Home</a>
       <a href="/newteam" class="w" id="n-t">New Team</a>
-      <a href="/contact" class="w" >Contact</a>
+      <a href="/contact" class="w">Contact</a>
+      <a href="/users" class="w admin-link" id="users-link">User's</a>
+      <a href="/shifts" class="w admin-link" id="shifts-link">Shift's</a>
     </div>
-  <hr>
-    <div id="admin_menu">
-      <a href="/users" class="w">User's</a>
-      <a href="/shifts" class="w">Shift's</a>
-    </div>
+    <hr>
+    
     <!-- New Plan Button -->
     <div id="new_plan_button">
       <button class="big-button">New Plan</button>
     </div>
     <HR>
 
-      <table id="maintable">
-        <tr>
-          <th>Workstation Number </th>
-          <th>Workstation Name</th>
-          <th>Description</th>
-          <th>Required Operators</th>
-        </tr>
-        
-      </table>
+    <table id="maintable">
+      <tr>
+        <th>Workstation Number </th>
+        <th>Workstation Name</th>
+        <th>Description</th>
+        <th>Required Operators</th>
+      </tr>
+    </table>
 
-<div id="new-station">
-  <HR>
-  <h3>Add New station Or Edit exist one </h3>
-  <form action="" id="edit_form">
-  <label for="station_number">Station Number:</label>
-  <input type="number" id="station_number" name="station_number" value=""required>
-  <br>
-  <label for="station_name">Station Name:</label>
-  <input type="text" id="station_name" name="station_name" value="" required><br>
+    <div id="new-station">
+      <HR>
+      <h3>Add New station Or Edit exist one </h3>
+      <form action="" id="edit_form">
+        <label for="station_number">Station Number:</label>
+        <input type="number" id="station_number" name="station_number" value="" required>
+        <br>
+        <label for="station_name">Station Name:</label>
+        <input type="text" id="station_name" name="station_name" value="" required><br>
+        <label for="requiredOperators">Required Operators:</label>
+        <input type="number" id="requiredOperators" name="requiredOperators" value="" required><br>
+        <label for="description">Description:</label><br>
+        <textarea id="description" name="description" rows="4" cols="50"></textarea><br>
+        <input type="submit" value="add/edit">
+      </form>
+    </div>
 
-  <label for="requiredOperators">Required Operators:</label>
-  <input type="number" id="requiredOperators" name="requiredOperators" value="" required><br>
+    <div id="user_team">Welkom: <span id="username"></span> , Your Team is: <span id="teamname"></span></div>
+    <div class="log">
+      <input type="button" id="logout" onclick="logout()" value="uitlogen">
+    </div>
 
-  <label for="description">Description:</label><br>
-  <textarea  id="description" name="description" rows="4" cols="50"></textarea><br>
-  <input type="submit" value="add/edit">
-</form>
-</div>
-
-
-<div id="user_team">Welkom: <span id="username"></span> , Your Team is: <span id="teamname"></span></div>
-<div class="log">
-  ​<input type="button" id="logout" onclick="logout()" value="uitlogen">
-</div>
-
-<script type="module" src="js/workstations.js"></script>
+    <script type="module" src="js/workstations.js"></script>
   </body>
 </html>
