insert the newplan button to almost all pages

--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -19,7 +19,11 @@
         <hr>
     </div>
 
-
+    <!-- New Plan Button -->
+    <div id="new_plan_button">
+        <button class="big-button">New Plan</button>
+        <hr>
+    </div>
     <header>
         <h1>Contact Us</h1>
     </header>
