--- a/public/html/shifts.html
+++ b/public/html/shifts.html
@@ -16,6 +16,10 @@
         <a href="/users" class="w" id="admin-link" style="display: none;">Users</a>
     </div>
     <hr>
+    <div id="new_plan_button">
+        <button class="big-button">New Plan</button>
+        <hr>
+    </div>
     <div class="form-container">
         <h1>Shift Management</h1>
         <form id="newshift">
