--- a/public/html/users.html
+++ b/public/html/users.html
@@ -15,7 +15,10 @@
         <a href="/shifts" class="w admin-only" id="admin-shifts">Shift's</a> <!-- Integrated admin link -->
     </div>
     <hr>
-
+    <div id="new_plan_button">
+        <button class="big-button">New Plan</button>
+        <hr>
+      </div>
     <div class="container">
         <h1>User Management System</h1>
         <h4 id="current_team">current_team</h4>
