updating shifts page

--- a/public/html/shifts.html
+++ b/public/html/shifts.html
@@ -57,7 +57,7 @@
                     <tr>
                         <th>Shift Name</th>
                         <th>Username</th>
-                        <th>Email</th>
+                        <th>Role</th> 
                         <th>Actions</th>
                     </tr>
                 </thead>
