--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -53,7 +53,7 @@
     </div>
     <footer>
         <hr>
-        <p>© 2025 Arabila. All rights reserved.</p>
+        <p>© 2025 Arabella. All rights reserved.</p>
     </footer>
 
     <script src="/js/contact.js"></script>
