validtion of user and password

--- a/public/html/shifts.html
+++ b/public/html/shifts.html
@@ -21,7 +21,7 @@
         <hr>
     </div>
     <div class="form-container">
-        <h1>Shift Management</h1>
+        <h1>Create New Shift</h1>
         <form id="newshift">
             <div class="form-group">
                 <label for="shiftname">Shift Name:</label>
