--- a/public/html/shifts.html
+++ b/public/html/shifts.html
@@ -35,6 +35,12 @@
 
     <div class="section">
         <h2>All Shifts</h2>
+        <div class="filter-container">
+            <label for="shiftFilter">Filter by Shift:</label>
+            <select id="shiftFilter">
+                <option value="">All Shifts</option>
+            </select>
+        </div>
         <div class="table-container">
             <table id="shiftsTable">
                 <thead>
@@ -56,6 +62,37 @@
     <div class="log">
         <input type="button" id="logout" value="Uitloggen">
     </div>
+
+    <!-- Update Shift Modal -->
+    <div id="updateShiftModal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <span class="close-modal">×</span>
+            <h2>Update Shift</h2>
+            <form id="updateShiftForm">
+                <div class="form-group">
+                    <label for="updateShiftName">Shift Name:</label>
+                    <input type="text" id="updateShiftName" name="updateShiftName" required>
+                </div>
+                <div class="form-group">
+                    <label for="assignUser">Assign User:</label>
+                    <select id="assignUser" name="assignUser" required>
+                        <option value="">Select a user</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="assignRole">Role:</label>
+                    <select id="assignRole" name="assignRole" required>
+                        <option value="admin">Admin</option>
+                        <option value="user">User</option>
+                    </select>
+                </div>
+                <div class="button-container">
+                    <button type="submit">Update Shift</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <script type="module" src="js/shifts.js"></script>
 </body>
 </html>
