my email in contact

--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -53,6 +53,7 @@
     </div>
     <footer>
         <hr>
+        <p>murtadaabed@yahoo.com</p>
         <p>© 2025 Arabella. All rights reserved.</p>
     </footer>
 
