updat users page add operators link in menu

--- a/public/html/users.html
+++ b/public/html/users.html
@@ -9,6 +9,7 @@
 <body>
     <div id="menu">
         <a href="/" id="r" class="w">Home</a>
+        <a href="/operators" class="w">Operators</a>
         <a href="/workstations" class="w">Workstations</a>
         <a href="/newteam" class="w" id="n-t">New Team</a>
         <a href="/contact" class="w">Contact</a>
